<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="habit"
            type="com.example.domain.models.DomainHabit" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#000000"
        android:padding="6dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/highPriorityRed"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/habitItemBody"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/habitName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{habit.title}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/habitName" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/priority"
                        android:textSize="8sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habitName" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/priorityLetter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_circle"
                        android:gravity="center"
                        tools:text="M"
                        android:text="@{habit.priority.toString().substring(0,1)}"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/repeat"
                        android:textSize="8sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habitName"
                        app:layout_goneMarginTop="2dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/repeatCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/shape_circle"
                        android:gravity="center"
                        android:text="@{Integer.toString(habit.count)}"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView5"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@{habit.priority.toString().toUpperCase()}"
                        android:textSize="8sp"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                        app:layout_constraintTop_toBottomOf="@+id/priorityLetter" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="@string/examplePeriod"
                        android:text="@{@string/atPeriod(habit.frequency.toString().toUpperCase())}"
                        android:textSize="8sp"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView5"
                        app:layout_constraintTop_toBottomOf="@+id/repeatCount" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_weight="1"
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_with_circle_side"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintStart_toEndOf="@+id/habitItemBody">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/habitType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="@string/typeExample"
                        android:text="@{habit.type.toString().toUpperCase()}"
                        android:textSize="8sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/habitDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:gravity="center"
                        android:text="@{habit.description}"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habitType"
                        tools:text="@string/exampleDescription" />

                    <ImageView
                        android:id="@+id/buttonCheck"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:paddingHorizontal="60dp"
                        android:src="@drawable/baseline_check_circle_outline_24"
                        android:tint="@android:color/holo_green_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/habitDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>